--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
-SESSION_ID = "VAJIRA-MD=yJkxlaKC#GsqcfWsaCKoPBdf-uWcujctTYKxglyr88MiIDgjr6Og"
-OWNER_NUMBER = "917005439105"
+SESSION_ID = 'VAJIRA-MD=yJkxlaKC#GsqcfWsaCKoPBdf-uWcujctTYKxglyr88MiIDgjr6Og'
+OWNER_NUMBER = '917005439105'
+POSTGRESQL_URL = 'postgres://vajiratech_user:oSIFl2xmSojMZ0rkzdd0g0W6msuVTpNN@dpg-cpd7fjv109ks73e5gtig-a.frankfurt-postgres.render.com/vajiratech'
